src/test/deca/codegen/valid/created/Objet/ObjectClass.deca
// Description:
//    Instanciation d'un type Object
// Resultats:
//    ok
{
    Object objet = new Object();
    println("ok");
}