src/test/deca/codegen/invalid/created/NullObject.deca
// Description:
//  Instanciation d'objet à null et assignement d'un autre avec celui-ci
// Resultats:
// NullObject.deca:17:11: Error: Illegal RValue type, got A, expected B

class A{

}
class B{

}

{
    A newA = new A();
    B newB = new B();
    newA = null;
    newB = newA;
}